--- a/package.json
+++ b/package.json
@@ -15,20 +15,30 @@
     "@babel/core": "^7.18.13",
     "@tauri-apps/api": "^1.0.2",
     "antd": "^4.22.8",
+    "base62": "^2.0.1",
     "crypto-js": "^4.1.1",
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "6",
-    "react-test": "^0.17.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@tauri-apps/cli": "^1.0.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
+    "jest": "^29.0.1",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
