--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-layout": "7.0.1-beta.28",
+    "@ant-design/pro-card": "< 2.0.0",
+    "@ant-design/pro-layout": "<7.0.0",
     "@babel/core": "^7.18.13",
     "@tauri-apps/api": "^1.0.2",
     "antd": "^4.22.8",
@@ -21,7 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -33,13 +34,13 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^28.1.8",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "jest": "^29.0.1",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9"
   }
 }
